# MobiRAG

./: .gitmodules  LICENSE  README.md
.github/workflows/: build-apk.yml
app/: build.gradle
app/src/androidTest/java/com/mobirag/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/source/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/mobirag/: ChatActivity.java  ChatAdapter.java  ChatMessage.java  ChunkMetadata.java  InferenceListener.java  KeywordExtractor.java  LlamaCppWrapper.java  MainActivity.java  SentenceEmbeddingActivity.java  TfIdfKeywordExtractor.java
app/src/main/kotlin/: SentenceEmbeddingWrapper.kt
app/src/main/res/drawable/: bg_user_message.xml
app/src/main/res/layout/: activity_chat.xml  activity_main.xml  activity_sentence_embedding.xml  chat_message_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mobirag/: ExampleUnitTest.java
